--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ daphne==4.0.0
 distlib==0.3.6
 Django==4.2.5
 filelock==3.8.0
+gunicorn==20.1.0
 hyperlink==21.0.0
 idna==3.4
 incremental==22.10.0
