--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ cryptography==41.0.4
 daphne==4.0.0
 distlib==0.3.6
 Django==4.2.5
+django-redis==5.4.0
 filelock==3.8.0
 gunicorn==20.1.0
 hyperlink==21.0.0
@@ -27,9 +28,9 @@ redis==5.0.1
 service-identity==23.1.0
 six==1.16.0
 sqlparse==0.4.4
-# Twisted==23.8.0
-# twisted-iocpsupport==1.0.4
-# txaio==23.1.1
+Twisted==23.8.0
+twisted-iocpsupport==1.0.4
+txaio==23.1.1
 typing_extensions==4.8.0
 tzdata==2023.3
 virtualenv==20.16.6
